# sigreg-video-lejepa

./: .gitignore  CLAUDE.md  CONVENTIONS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
configs/: config.yaml  linprobe_config.yaml  verify_sigreg_cpu.py
configs/data/: synthetic.yaml  ucf101_medium.yaml  ucf101_small.yaml  ucf101_small_eval.yaml  ucf101_vjepa2_match.yaml
configs/evaluation/: linear_probe.yaml
configs/experiment/: phase4_benchmark.yaml  phase4_ema_seed0.yaml  phase4_ema_seed1.yaml  phase4_sigreg_seed0.yaml  phase4_sigreg_seed1.yaml  phase5_ema_decay_999.yaml  phase5_ema_seed0.yaml  phase5_ema_seed0_tpu.yaml  phase5_ema_seed1.yaml  phase5_ema_seed1_tpu.yaml  phase5_gpu_smoke.yaml  phase5_sigreg_seed0.yaml  phase5_sigreg_seed0_tpu.yaml  phase5_sigreg_seed1.yaml  phase5_sigreg_seed1_tpu.yaml  phase5_tpu_smoke.yaml  phase6_ema_seed0.yaml  phase6_ema_seed0_tpu.yaml  phase6_ema_seed1.yaml  phase6_ema_seed1_tpu.yaml  phase6_gpu_smoke.yaml  phase6_sigreg_seed0.yaml  phase6_sigreg_seed0_tpu.yaml  phase6_sigreg_seed1.yaml  phase6_sigreg_seed1_tpu.yaml  smoke_test.yaml  (+8 more)
docs/: design_decisions.md  phase4_results.md  phase5_results.md  phase6_results.md  sigreg-spec.md
notebooks/: 01_colab_pretrain.ipynb  02_kaggle_linprobe.ipynb  03_kaggle_pretrain.ipynb
scripts/: aggregate_results.py  extract_features.py  linear_probe.py  pretrain.py  pretrain_tpu.py
tests/: conftest.py  test_linear_probe.py  test_phase4.py  test_phase5.py  test_phase5b.py  test_phase5c.py  test_phase6.py  test_smoke.py  test_ucf101.py  test_xla_device_selection.py
(+38 files in other folders)
