[project]
name = "sigreg-video-lejepa"
version = "0.1.0"
description = "Applying LeJEPA's SIGReg training recipe to V-JEPA-style video architectures."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ankit Pani", email = "ankitpani@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "lightning>=2.4.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "einops>=0.8.0",
    "timm>=1.0.11",
    "decord>=0.6.0",
    "av>=13.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "rich>=13.9.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigreg_video_lejepa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",
    "N806",  # uppercase tensor-dimension variables (B, N, D, T, H, W, S, A) are standard in PyTorch
    "N812",  # `import lightning as L` and `import torch.nn.functional as F` are universal aliases
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
